name:                IPv6DB
version:             0.1.0
synopsis:            A RESTful Web Service for IPv6-related data
description:         IPv6DB is a RESTful microservice to store lists of IPv6
                     addresses and attach to each of them a free-schema JSON
                     value. Each resource can be permanent or TTLed.
                     using Redis as backend
homepage:            https://github.com/MichelBoucey/IPv6DB
license:             BSD3
license-file:        LICENSE
author:              Michel Boucey
maintainer:          michel.boucey@cybervisible.fr
copyright:           (c) 2017 - Michel Boucey
category:            network, database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , IPv6DB_APIv1.md

Source-Repository head
  Type: git
  Location: https://github.com/MichelBoucey/IPv6DB.git

library
  hs-source-dirs:     src
  exposed-modules:    Network.IPv6DB.Types 
  build-depends:      aeson                >= 0.11.2 && < 1.2
                    , attoparsec           >= 0.13.1.0 && < 0.14
                    , base                 >= 4.9.0 && < 5.0
                    , bytestring           >= 0.10.6 && < 0.11
                    , IPv6Addr             >= 1.0.0 && < 1.1.0
                    , hedis                >= 0.9.4 && < 0.10
                    , http-types           >= 0.9.1 && < 0.10
                    , unordered-containers >= 0.2.7.2 && < 0.2.9
                    , mtl                  >= 2.2.1 && < 2.3
                    , text                 >= 1.2.2 && < 1.3
                    , vector               >= 0.11.0.0 && < 0.13
  default-language: Haskell2010

executable ipv6db
  hs-source-dirs:     app
  main-is:            Main.hs
  other-modules:      Options
                    , Redis
                    , Types
  build-depends:      aeson                >= 0.11.2 && < 1.2
                    , base                 >= 4.9.0 && < 5.0
                    , bytestring           >= 0.10.6 && < 0.11
                    , IPv6Addr             >= 1.0.0 && < 1.1.0
                    , IPv6DB
                    , hedis                >= 0.9.4 && < 0.10
                    , http-types           >= 0.9.1 && < 0.10
                    , unordered-containers >= 0.2.7.2 && < 0.2.9
                    , mtl                  >= 2.2.1 && < 2.3
                    , optparse-applicative >= 0.12.1.0 && < 0.14
                    , text                 >= 1.2.2 && < 1.3
                    , vector               >= 0.11.0.0 && < 0.13
                    , wai                  >= 3.2.1 && < 3.3
                    , warp                 >= 3.2.9 && < 3.3

  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            hspec.hs
  build-depends:      aeson       >= 0.11.2 && < 1.2
                    , lens-aeson  >= 1.0.0.5 && < 1.1
                    , hspec       >= 2.1.10 && < 2.5
                    , base        >= 4.8 && < 5
                    , IPv6DB
                    , lens        >= 4.14 && < 5
                    , vector      >= 0.11.0.0 && < 0.13
                    , http-client
                    , http-types  >= 0.9.1
  default-language:   Haskell2010

